--- a/meditation-app/styles/style.css
+++ b/meditation-app/styles/style.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.9);
   font-family: 'Bitter', serif;
 }
 
@@ -30,6 +30,15 @@ body {
   overflow: hidden;
 }
 
+@media screen and (max-width: 642px) {
+  .meditation__video-block {
+    width: 100%;
+    height: calc(100% - 200px);
+    position: absolute;
+    top: 120px;
+  }
+}
+
 .video-block__wrapper {
   display: flex;
   transition: all 0.5s linear;
@@ -42,18 +51,62 @@ body {
   object-position: center;
 }
 
+@media screen and (max-width: 642px) {
+  .meditation__video {
+    height: calc(100vh - 240px); 
+  }
+}
+
 .meditation__navigation {
-  height: 100%;
-  width: 300px;
-  background-color: rgba(255, 255, 255, 0.1);
-  position: absolute;
   top: 0;
   right: 0;
-  z-index: 2;
+}
+
+@media screen and (max-width: 768px) {
+  .meditation__navigation {
+    top: 0;
+    right: 0;
+  }
+}
+
+.meditation__controll {
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .meditation__controll {
+    top: calc(100% - 130px);
+    left: 0;
+  }
+}
+
+.meditation__navigation,
+.meditation__controll {
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  z-index: 2;
+}
+
+@media screen and (max-width: 768px) {
+  .meditation__navigation,
+  .meditation__controll {
+    height: 130px;
+    width: 100%;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 658px) {
+  .meditation__navigation,
+  .meditation__controll {
+    height: 120px;
+  }
 }
 
 .button {
@@ -77,6 +130,40 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.8;
+  margin: 0 60px;
+}
+
+@media screen and (max-width: 1024px) {
+  .navigation__button-element {
+    margin: 0 40px;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .navigation__button-element {
+    height: 80px;
+    width: 130px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation__button-element {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 642px) {
+  .navigation__button-element {
+    height: 60px;
+    width: 96px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .navigation__button-element {
+    height: 50px;
+    width: 82px;
+  }
 }
 
 .meditation__navigation .button-element--active,
@@ -111,21 +198,26 @@ body {
   transition: opacity 0.4s linear;
 }
 
-.navigation__button-element:hover > .button-element__name {
-  opacity: 1;
+@media screen and (max-width: 920px) {
+  .button-element__name {
+    font-size: 32px;
+  }
 }
 
-.meditation__controll {
-  height: 100%;
-  width: 300px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(255, 255, 255, 0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+@media screen and (max-width: 642px) {
+  .button-element__name {
+    font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .button-element__name {
+    font-size: 21px;
+  }
+}
+
+.navigation__button-element:hover > .button-element__name {
+  opacity: 1;
 }
 
 .controll__button-time {
@@ -134,6 +226,42 @@ body {
   color: white;
   font-size: 28px;
   opacity: 0.6;
+  margin: 0 60px;
+}
+
+@media screen and (max-width: 1024px) {
+  .controll__button-time {
+    margin: 0 40px;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .controll__button-time {
+    height: 70px;
+    width: 130px;
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .controll__button-time {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 642px) {
+  .controll__button-time {
+    height: 50px;
+    width: 86px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .controll__button-time {
+    width: 68px;
+    font-size: 14px;
+  }
 }
 
 .controll__button-time:hover {
@@ -151,6 +279,27 @@ body {
   width: 130px;
   border-radius: 50%;
   position: relative;
+}
+
+@media screen and (max-width: 920px) {
+  .controll__button-play {
+    height: 100px;
+    width: 100px;
+  }
+}
+
+@media screen and (max-width: 642px) {
+  .controll__button-play {
+    height: 86px;
+    width: 86px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .controll__button-play {
+    height: 76px;
+    width: 76px;
+  }
 }
 
 .controll__button-play:hover,
@@ -172,6 +321,19 @@ body {
   font-weight: 600;
 }
 
+@media screen and (max-width: 920px) {
+  .button-play__text{
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .button-play__text{
+    top: 24%;
+    font-size: 14px;
+  }
+}
+
 .button-play__timer {
   margin-top: 10px;
   font-size: 32px;
@@ -180,11 +342,53 @@ body {
   color: white;
 }
 
+@media screen and (max-width: 920px) {
+  .button-play__timer {
+    margin-top: 6px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 642px) {
+  .button-play__timer {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .button-play__timer {
+    margin-top: 0;
+  }
+}
+
 .controll__button-reset {
   height: 46px;
   width: 110px;
   border-radius: 10px;
   font-size: 24px;
+}
+
+@media screen and (max-width: 920px) {
+  .controll__button-reset {
+    height: 36px;
+    width: 90px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 642px) {
+  .controll__button-reset {
+    height: 36px;
+    width: 70px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .controll__button-reset {
+    height: 30px;
+    width: 46px;
+    font-size: 14px;
+  }
 }
 
 
